# meilisearch-lab

./: .gitignore  Cargo.toml  README.md  install.sh
src/: client.rs  main.rs  models.rs  operations.rs
