[package]
name = "meilisearch-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
meilisearch-sdk = "0.29.1"
futures = "0.3" # To be able to block on async functions if you are not using an async runtime
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
